feat: add fields
