# app/controllers/api/v1/proposals_controller.rb
@@ -5,8 +5,8 @@ class Api::V1::ProposalsController < ApplicationController
   skip_before_action :verify_authenticity_token
 
   def index
-    conference = Conference.find_by(abbr: params[:eventAbbr])
-    query = { conference_id: conference.id }
+    @conference = Conference.find_by(abbr: params[:eventAbbr])
+    query = { conference_id: @conference.id }
     @proposals = Proposal.where(query)
     render(:index, formats: :json, type: :jbuilder)
   end
